--- a/MoyaiMap.html
+++ b/MoyaiMap.html
@@ -1,8 +1,110 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="ja">
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<body>
-	</body>
-</head>
+<HEAD>
+<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+<script type="text/javascript" src="./js/balloon.js"></script>
+<link rel="shortcut icon" href="./img/balloon2013.ico">
+<link type="text/css" href="./css/menu.css" rel="stylesheet" media="all" />
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+<script src="./js/jquery.min.js"></script>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script type="text/javascript">
+    window.onload = initialize;
+    function initialize() {
+      var myOptions = {
+        zoom: 12,
+        center: new google.maps.LatLng(34.5436683, 131.8383112),
+        mapTypeId: google.maps.MapTypeId.ROADMAP
+      };
+      var map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
+    }
+</script>
+<meta http-equiv="content-type" content="text/html; charset=shift-jis">
+<TITLE>もやいマップ</TITLE>
+</HEAD>
+<BODY>
+<table align="center">
+<tr height="64">
+	<td align="left" width="280">
+	<a href="index.html"><img src="./img/moyai.png" width="280" height="50"></a>
+	</td>
+	<td valign="middle" align="center" width="150">
+	<ul id="dropmenu">
+ 		<li><a href="#"><img src="./img/icon_2013001.png" alt="ジャンル" border="0" width="150" onmouseover="i20131_over();" onmouseout="i20131_out();" name="i20131" vspace="10"></a>
+		<ul>
+			<li><a href="#">移動販売</a></li>
+			<li><a href="#">鉄道</a></li>
+			<li><a href="#">バス</a></li>
+			<li><a href="#">公民館</a></li>
+			<li><a href="#">食料品店</a></li>
+		</ul>
+		</li>
+	</ul>
+	</td>
+	<td valign="middle" align="center" width="150">
+	<ul id="dropmenu2">
+ 		<li><a href="#"><img src="./img/icon_2013002.png" alt="地域" border="0" width="150" onmouseover="i20132_over();" onmouseout="i20132_out();" name="i20132" vspace="10"></a>
+		<ul>
+			<li><a href="#">左鎧</a></li>
+			<li><a href="#">青原</a></li>
+			<li><a href="#">後日</a></li>
+			<li><a href="#">日原</a></li>
+			<li><a href="#">木部</a></li>
+		</ul>
+		</li>
+	</ul>
+	</td>
+	<td valign="middle" align="center" width="150">
+	<ul id="dropmenu3">
+ 		<li><a href="#"><img src="./img/icon_2013003.png" alt="曜日" border="0" width="150" onmouseover="i20133_over();" onmouseout="i20133_out();" name="i20133" vspace="10"></a>
+		<ul>
+			<li><a href="#">月</a></li>
+			<li><a href="#">火</a></li>
+			<li><a href="#">水</a></li>
+			<li><a href="#">木</a></li>
+			<li><a href="#">金</a></li>
+		</ul>
+		</li>
+	</ul>
+	</td>
+	<td valign="middle" align="center" width="150">
+	<ul id="dropmenu4">
+ 		<li><a href="#"><img src="./img/icon_2013004.png" alt="時刻" border="0" width="150" onmouseover="i20134_over();" onmouseout="i20134_out();" name="i20134" vspace="10"></a>
+		<ul>
+			<li><a href="#">9:00-11:00</a></li>
+			<li><a href="#">11:00-13:00</a></li>
+			<li><a href="#">13:00-15:00</a></li>
+			<li><a href="#">15:00-17:00</a></li>
+		</ul>
+		</li>
+	</ul>
+	</td>
+	<td valign="middle" align="center" width="150">
+	<ul id="dropmenu5">
+ 		<li><a href="#"><img src="./img/icon_2013005.png" alt="健康情報" border="0" width="150" onmouseover="i20135_over();" onmouseout="i20135_out();" name="i20135" vspace="10"></a>
+		<ul>
+			<li><a href="#">要相談</a></li>
+			<li><a href="#">要往診</a></li>
+		</ul>
+		</li>
+	</ul>
+	</td>
+</tr>
+</table>
+<table align="center">
+<tr height="480">
+<td style="margin-left: 10px 20px; background: #f2f2f2;" width="256" valign="middle" align="center">
+検索結果表示
+</td>
+<td width="780" height="520">
+<div id="map_canvas" style="height:100%;width:100%;"></div>
+</td>
+</tr>
+</table>
+
+</BODY>
+</HTML>
+
+
+
+ 
